Fixing image overflow issue on what we do page

--- a/app/assets/stylesheets/components/_blocks.scss
+++ b/app/assets/stylesheets/components/_blocks.scss
@@ -210,6 +210,7 @@
 .image-slide {
   padding: 0;
   margin: 0 auto;
+  overflow: hidden;
   .block-content {
     margin: 0;
     &.image-slide {
